--- a/Frontend/Agricultor/Alertas/alertas.html
+++ b/Frontend/Agricultor/Alertas/alertas.html
@@ -275,14 +275,19 @@
 
 <!-- Panel emergente -->
 <div id="panel-notificaciones" style="
-  display: none; position: absolute; top: 115px; left: 1150px; width: 280px;
+  display: none;
+  position: absolute;
+  top: 115px; left: 1150px; width: 320px; max-width: 90vw;
   background-color: white; border: 1px solid #ccc; border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0,0,0,0.15); padding: 12px; z-index: 999;
-  font-family: 'IBM Plex Mono'; font-size: 14px; color: #344E41;">
+  font-family: 'IBM Plex Mono'; font-size: 14px; color: #344E41;
+">
   <strong>Notificaciones recientes</strong>
-  <ul id="lista-notificaciones" style="list-style: none; padding: 0; margin-top: 10px;">
-    <li>No hay notificaciones nuevas.</li>
-  </ul>
+  <div style="max-height: 330px; overflow-y: auto; margin-top: 10px;">
+    <ul id="lista-notificaciones" style="list-style: none; padding: 0; margin: 0;">
+      <li>No hay notificaciones nuevas.</li>
+    </ul>
+  </div>
 </div>
 
 <!-- Modal de recomendaciones -->
