--- a/Frontend/Tecnico/Inicio/inicio_tecnico.html
+++ b/Frontend/Tecnico/Inicio/inicio_tecnico.html
@@ -1,4 +1,4 @@
-<div data-layer="Tecnico Inicio" class="TecnicoInicio" style="width: 1543px; height: 1800px; position: relative; background: #FBF9F4; overflow: hidden">
+<div data-layer="Tecnico Inicio" class="TecnicoInicio" style="width: 1543px; height: 2457px; position: relative; background: #FBF9F4; overflow: hidden">
   <div data-layer="Con EcoSmart tienes información oportuna para la toma de desiciones del control de tu cosecha" class="ConEcosmartTienesInformaciNOportunaParaLaTomaDeDesicionesDelControlDeTuCosecha" style="width: 1201px; height: 241px; left: 190px; top: 910px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 48px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Con EcoSmart tienes información oportuna<br/><br/>para la toma de desiciones del control de<br/> <br/>tu cosecha</div>
   <div data-layer="Rectangle 24" class="Rectangle24" style="width: 645px; height: 541px; left: 82px; top: 1180px; position: absolute; background: #A3B18A; border-radius: 14px"></div>
   
@@ -22,6 +22,17 @@
     Configuración de Alertas
   </a>
   <!---------------------->
+
+
+  <div data-layer="Rectangle 24" class="Rectangle24" style="width: 1373px; height: 541px; left: 84px; top: 1818px; position: absolute; background: #A3B18A; border-radius: 14px"></div>
+  <div data-layer="Registra, modifica o elimina usuarios" class="usuario" style="width: 1253.79px; height: 128px; left: 147.86px; top: 2180px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Registra, modifica o elimina usuarios</div>
+  <img data-layer="imagenUsuario" class="imagenusuario1" style="width: 169.04px; height: 169.04px; left: 685.48px; top: 1971.98px; position: absolute" src="imagenes/nuevo-usuario.png" />
+  <a href="/Frontend/Tecnico/Configuracion_usuarios/usuarios.html"
+    style="width: 853.60px; height: 89px; left: 330.93px; top: 1844px; position: absolute; text-align: center; justify-content: 
+    center; display: flex; flex-direction: column; color: black; font-size: 36px; font-family: IBM Plex Mono; font-weight: 700; 
+    text-decoration: underline; line-height: 28px; word-wrap: break-word">
+    Configuraciones de usuarios
+  </a>
 
   <div data-layer="Crea alertas personalizadas según tus necesidades para comenzar a monitorear tus cultivos." class="configuraAlertas" style="width: 589.68px; height: 128px; left: 833.66px; top: 1550px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Crea alertas personalizadas según tus necesidades para comenzar a monitorear tus cultivos.</div>
   <div data-layer="bot (3)" class="Bot3" style="width: 186.06px; height: 186.06px; left: 1041.47px; top: 1341.88px; position: absolute"></div>
@@ -94,15 +105,20 @@
 
 <!-- Panel emergente -->
 <div id="panel-notificaciones" style="
-  display: none; position: absolute; top: 115px; left: 1150px; width: 280px;
+  display: none;
+  position: absolute;
+  top: 115px; left: 1150px; width: 320px; max-width: 90vw;
   background-color: white; border: 1px solid #ccc; border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0,0,0,0.15); padding: 12px; z-index: 999;
-  font-family: 'IBM Plex Mono'; font-size: 14px; color: #344E41;">
+  font-family: 'IBM Plex Mono'; font-size: 14px; color: #344E41;
+">
   <strong>Notificaciones recientes</strong>
-  <ul id="lista-notificaciones" style="list-style: none; padding: 0; margin-top: 10px;">
-    <li>No hay notificaciones nuevas.</li>
-  </ul>
-</div>
+  <div style="max-height: 330px; overflow-y: auto; margin-top: 10px;">
+    <ul id="lista-notificaciones" style="list-style: none; padding: 0; margin: 0;">
+      <li>No hay notificaciones nuevas.</li>
+    </ul>
+  </div>
+</div>c
 
 <!-- Modal de recomendaciones -->
 <div id="modal-recomendacion" style="
