--- a/Frontend/Agricultor/Monitoreo_de_Cultivos/monitoreo.html
+++ b/Frontend/Agricultor/Monitoreo_de_Cultivos/monitoreo.html
@@ -1,37 +1,81 @@
-<div data-layer="Agricultor Monitoreo de Cultivos" class="AgricultorMonitoreoDeCultivos" style="width: 1540px; height: 3863px; position: relative; background: #FBF9F4; overflow: hidden">
-  
-  <!-- Visualización de datos (Gráficos) - Sección corregida -->
-<div data-layer="Agricultor Monitoreo de Cultivos" style="width: 1540px; height: 3863px; position: relative; background: #FBF9F4; overflow: hidden">
-  
-<div data-layer="Rectangle 29" style="width: 1540px; height: 733px; left: 0px; top: 3080px; position: absolute; background: #344E41"></div>
+<!-- Contenedor general aumentado para permitir más scroll -->
+<div data-layer="Agricultor Monitoreo de Cultivos" class="AgricultorMonitoreoDeCultivos"
+  style="width: 1540px; height: 4000px; position: relative; background: #FBF9F4; overflow: visible;">
 
-<div style="position: absolute; top: 3000px; left: 0; width: 100%; display: flex; flex-direction: column; align-items: center; font-family: 'IBM Plex Mono';">
-  <div style="color: #344E41; font-size: 64px; font-weight: 700; margin-bottom: 60px;">
-    Visualización de Datos
+  <!-- Fondo rectangular oscuro (mantener) -->
+  <div data-layer="Rectangle 29"
+    style="width: 1540px; height: 733px; left: 0px; top: 3080px; position: absolute; background: #344E41; z-index: 1;">
   </div>
 
-  <div style="text-align: center;">
-    <label for="parcelaSelect" style="font-size: 20px; margin-right: 10px;">Seleccione una parcela:</label>
-    <select id="parcelaSelect" style="width: 300px; padding: 10px; font-size: 16px; margin-bottom: 30px;"></select>
-    
-    <br />
+  <!-- Contenido principal desplazado más abajo -->
+  <div style="position: relative; top: 3000px; width: 100%; display: flex; flex-direction: column; align-items: center; font-family: 'IBM Plex Mono'; z-index: 10;">
 
-    <label for="tipoDato" style="font-size: 20px; margin-right: 10px;">Seleccione tipo de dato:</label>
-    <select id="tipoDato" style="width: 300px; padding: 10px; font-size: 16px; margin-bottom: 40px;">
-      <option value="Temperatura Ambiente">Temperatura Ambiente</option>
-      <option value="Humedad del suelo">Humedad del suelo</option>
-      <option value="Nivel de PH">Nivel de PH</option>
-      <option value="Nivel de Nutrientes">Nivel de Nutrientes</option>
-    </select>
-    
-    <br />
+    <div style="color: #344E41; font-size: 64px; font-weight: 700; margin-bottom: 60px;">
+      Visualización de Datos
+    </div>
 
-    <canvas id="graficoSensor" width="800" height="400" style="margin-top: 50px; background: #fff; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);"></canvas>
+    <div style="text-align: center;">
+      <label for="parcelaSelect" style="font-size: 20px; color: #ffffff;margin-right: 10px;">Seleccione una parcela:</label>
+      <select id="parcelaSelect" style="width: 300px; padding: 10px; font-size: 16px; margin-bottom: 30px;"></select>
+
+      <br />
+
+      <label for="tipoDato" style="font-size: 20px;color: #ffffff; margin-right: 10px;">Seleccione tipo de dato:</label>
+      <select id="tipoDato" style="width: 300px; padding: 10px; font-size: 16px; margin-bottom: 40px;">
+        <option value="Temperatura Ambiente">Temperatura Ambiente</option>
+        <option value="Humedad del suelo">Humedad del suelo</option>
+        <option value="Nivel de PH">Nivel de PH</option>
+        <option value="Nivel de Nutrientes">Nivel de Nutrientes</option>
+      </select>
+
+      <br />
+      <canvas id="graficoSensor" width="800" height="400"
+        style="margin-top: 50px; background: #fff; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+      </canvas>
+    </div>
+
+    <!-- Sección de análisis de tendencias -->
+    <div id="analisis-tendencia"
+      style="margin-top: 100px; width: 80%; background: #fff; padding: 30px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); text-align: left; font-family: 'IBM Plex Mono'; color: #344E41;">
+      <h2 style="font-size: 32px; margin-bottom: 20px;">Análisis de Tendencias</h2>
+
+      <p id="contexto"><em>Esperando selección...</em></p>
+
+      <div id="analisisVariables">
+        <h3>🌡️ Temperatura</h3>
+        <p><em>Esperando datos...</em></p>
+
+        <h3>💧 Humedad</h3>
+        <p><em>Esperando datos...</em></p>
+
+        <h3>⚗️ pH del Suelo</h3>
+        <p><em>Esperando datos...</em></p>
+
+        <h3>🌱 Nutrientes</h3>
+        <p><em>Esperando datos...</em></p>
+      </div>
+
+      <div id="alertasCriticas">
+        <h3>📌 Eventos Críticos</h3>
+        <p><em>Esperando análisis...</em></p>
+      </div>
+
+      <div id="recomendacionesFinales">
+        <h3>📌 Recomendaciones</h3>
+        <p><em>Se mostrarán recomendaciones aquí.</em></p>
+      </div>
+
+      <button onclick="descargarPDF()"
+        style="margin-top: 20px; padding: 10px 20px; background: #588157; color: white; border: none; border-radius: 8px; cursor: pointer;">
+        Descargar PDF
+      </button>
+    </div>
+
   </div>
 </div>
 
 <script src="visualizacion_graficos.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 
 
