--- a/Frontend/Agricultor/Analisis_de_riego/riego.html
+++ b/Frontend/Agricultor/Analisis_de_riego/riego.html
@@ -1,26 +1,28 @@
 <div style="width: 1540px; height: 1801px; position: relative; background: #FBF9F4; overflow: hidden">
-  <div style="width: 1201px; height: 241px; left: 190px; top: 911px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 48px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Con EcoSmart tienes información oportuna<br/><br/>para la toma de desiciones del control de<br/> <br/>tu cosecha</div>
-  <div style="width: 645px; height: 541px; left: 812px; top: 1181px; position: absolute; background: #A3B18A; border-radius: 14px"></div>
-  <a href="/Frontend/Agricultor/Analisis_de_riego/riego.html"
-    style="width: 401px; height: 89px; left: 934px; top: 1222px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 36px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word;">
-    Analisis de riego
+  <a href="/Frontend/Agricultor/Inicio/inicio_agricultor.html"
+    style="width: 127px; height: 45px; left: 1160.41px; top: 52px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word">Atrás
   </a>
-  <img style="width: 116px; height: 116px; left: 1077px; top: 1357px; position: absolute" src="imagenes/riego.png" />
-  <div style="width: 625px; height: 128px; left: 822px; top: 1547px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Conoce el mejor momento para regar tus cultivos analizando las condiciones climáticas actuales y pronosticadas. Optimiza el uso del agua con recomendaciones inteligentes basadas en temperatura, humedad, nubosidad y viento.</div>
-  <div style="width: 645px; height: 541px; left: 82px; top: 1181px; position: absolute; background: #A3B18A; border-radius: 14px"></div>
-  <a href="/Frontend/Agricultor/Monitoreo_de_Cultivos/monitoreo.html"
-    style="width: 401px; height: 89px; left: 198px; top: 1207px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 36px; font-family: IBM Plex Mono; font-weight: 700; text-decoration: underline; line-height: 28px; word-wrap: break-word;">
-    Monitoreo de<br/><br/>Cultivos
-  </a>
-  <img style="width: 185px; height: 185px; left: 312px; top: 1327px; position: absolute" src="imagenes/analisis-de-los-datos.png" />
-  <div style="width: 589px; height: 128px; left: 112px; top: 1543px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">Obtén datos precisos y en tiempo real sobre las condiciones clave de tus plantas, como temperatura, humedad, pH y nutrientes, para tomar decisiones informadas.</div>
   <div style="width: 344px; height: 106px; left: 23px; top: 77px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 64px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">EcoSmart</div>
   <img style="width: 76px; height: 76px; left: 157px; top: 39px; position: absolute" src="imagenes/plantacion (6).png" />
   <img style="width: 1597.01px; height: 674px; left: 0px; top: 230px; position: absolute" src="imagenes/imagen-cultivo.JPG" />
-  <div style="width: 1077px; height: 368px; left: 43px; top: 162px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: black; font-size: 32px; font-family: Roboto; font-weight: 300; line-height: 28px; word-wrap: break-word">EcoSmart nace como respuesta a desafíos como el cambio climático,  la escasez de recursos hídricos y reducir el impacto ambiental de las <br/>prácticas agrícolas tradicionales, proporcionando una <br/>plataforma integral que aprovecha tecnologías de <br/>vanguardia para revolucionar la forma en que <br/>se gestiona la agricultura, desde pequeñas <br/>explotaciones hasta operaciones <br/>comerciales a gran <br/>escala.</div>
+  
+  <!-- CONTENIDO PRINCIPAL DE ANÁLISIS -->
+<div style="position: absolute; top: 950px; left: 60px; width: 90%;">
+  <!-- Selector de parcela -->
+  <select id="selector-parcela" style="font-family: 'IBM Plex Mono'; font-size: 18px; padding: 8px; margin-bottom: 20px;">
+    <option selected disabled>Seleccione una parcela...</option>
+  </select>
+
+  <!-- Recomendación -->
+  <div class="recomendacion" id="recomendacion-riego" style="font-family: 'IBM Plex Mono'; font-size: 20px; margin: 20px 0;">Esperando selección de parcela...</div>
+
+  <!-- Gráfico -->
+  <canvas id="grafico-riego" width="600" height="300"></canvas>
+</div>
   <div style="width: 223px; height: 72px; left: 1270px; top: 39px; position: absolute; background: #588157; border-radius: 28px"></div>
   <img style="width: 37px; height: 37px; left: 1287px; top: 56px; position: absolute" src="imagenes/avatar.png" />
   <div id="nombre-usuario-agricultor" style="width: 127px; height: 45px; left: 1336px; top: 52px; position: absolute; text-align: center; justify-content: center; display: flex; flex-direction: column; color: white; font-size: 20px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Agricultor</div>
+  <div data-layer="Analisis de riego" class="Analisis_de_riego" style="width: 1061.33px; height: 272px; left: 45.41px; top: 183px; position: absolute; justify-content: center; display: flex; flex-direction: column; color: #344E41; font-size: 94px; font-family: IBM Plex Mono; font-weight: 700; line-height: 28px; word-wrap: break-word">Analisis de riego</div>
   <script>
     const nombre = localStorage.getItem("nombreUsuario");
     if (nombre) {
@@ -218,6 +220,12 @@
     document.addEventListener("DOMContentLoaded", cargarNotificaciones);
     campana.addEventListener("click", cargarNotificaciones);
   </script>
+
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<!-- Script personalizado -->
+    <script src="analisis_riego.js"></script>
 
 
 </div>
